--- a/calculos_frequencia/assets/css/estilo.css
+++ b/calculos_frequencia/assets/css/estilo.css
@@ -18,7 +18,7 @@
     align-items: center;
 }
 header{
-    background-color: cornflowerblue;
+    background-color: rgb(37, 4, 68);
     width: 100%;
 }
 header nav a{
@@ -34,8 +34,8 @@ header nav a{
 }
 
 footer{
-    background-color: #333;
-    color: #fff;
+    background-color: rgb(243, 11, 11);
+    color: rgb(19, 17, 17);
     width: 100%;
     position: absolute;
     left: 0;
